--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{{page.title}}</title>
   <meta property="og:title" content="{{page.title}}" />
   <meta name="description" content="{{page.description}}" />
-  <meta property="og:description" content="In this post you will learn how to create a RESTful microservice from scratch using Spring-Boot, Eclipse &amp; Maven." />
+  <meta property="og:description" content="{{page.description}}" />
   <link rel="canonical" href="{{site.url}}{{page.url}}" />
   <meta property="og:url" content="{{site.url}}{{page.url}}" />
   <meta property="og:site_name" content="{{site.name}}" />
