corrected liquid tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <!-- SEO stuff -->
   <title>{{page.title}}</title>
   <meta property="og:title" content="{{page.title}}" />
-  {% if page.description}
+  {% if page.description %}
 	  <meta name="description" content="{{page.description}}" />
 	  <meta property="og:description" content="{{page.description}}" />
   {% else %}
