--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8"></meta> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" ></meta>
-  <link rel="shortcut icon" type="image/x-icon" href="/fav.ico" />
+  <link rel="shortcut icon" type="image/png" href="/icon.png" />
   
   <!-- SEO stuff -->
   <title>{{page.title}}</title>
