--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,8 @@
   <link rel="shortcut icon" type="image/png" href="/icon.png" />
   
   <meta name="twitter:card" content="summary">
-	  
+  <meta name="twitter:site" content="@koint">
+  <meta name="twitter:creator" content="@koint">
   
   <!-- SEO stuff -->
   <title>{{page.title}}</title>
