layout enhancements and started new article

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="footer">
 	<ul class="footer-links">
-		<li><h3>Follow</h3></li>
 		<li><a href="http://github.com/alainpham"> <i
-				class="fa fa-inverse fa-github fa-5x"></i></a></li>
+				class="fa fa-inverse fa-github fa-3x"></i></a></li>
 		<li><a href="http://www.linkedin.com/in/alainpham"> <i
-				class="fa fa-inverse fa-linkedin-square fa-5x"></i></a></li>
+				class="fa fa-inverse fa-linkedin-square fa-3x"></i></a></li>
+		<li><a href="https://twitter.com/koint"> <i
+				class="fa fa-inverse fa-twitter fa-3x"></i></a></li>
 	</ul>
 </footer>
