--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,22 @@
 							<li><a href="/projects/ourlegacy">OurLegacy</a></li>
 						</ul></li>
 					<li><a href="/">Posts</a></li>
-<!-- 					<li><a href="/">Presentations</a></li>
-					<li><a href="/">Tags</a></li> -->
+<!-- 					<li><a href="/">Presentations</a></li>-->
+					<li><a href="/tags">Tags</a></li> 
 					<li><a href="/about/">About</a></li>
+					
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" href="#">Follow me<span
+							class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="http://github.com/alainpham"> <i
+									class="fa fa-inverse fa-github fa-2x"></i> GitHub</a></li>
+							<li><a href="http://www.linkedin.com/in/alainpham"> <i
+									class="fa fa-inverse fa-linkedin-square fa-2x"></i> LinkedIn</a></li>
+							<li><a href="https://twitter.com/koint"> <i
+									class="fa fa-inverse fa-twitter fa-2x"></i>Twitter</a></li>
+						</ul></li>
+					
 				</ul>
 			</div>
 		</div>
@@ -37,8 +50,6 @@
 	<div class="jumbotron  clearfix">
 
 		<h1 class="text-center">{{ page.title }}</h1>
-
-
 		
 	</div>
 </div>
