added article about ansible automation

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -84,6 +84,7 @@
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/css/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
+   <link href="/assets/css/syntax.css" rel="stylesheet">
   
   <script src="/assets/js/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
