--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,9 @@
 						</ul></li>
 					<li><a href="/">Posts</a></li>
 <!-- 					<li><a href="/">Presentations</a></li>-->
-					<li><a href="/tags">Tags</a></li> 
+					<li><a href="/tags">Tags</a></li>
 					<li><a href="/about/">About</a></li>
-					
+					<li><a href="/books/">Recommended books</a></li>
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" href="#">Follow me<span
 							class="caret"></span></a>
@@ -36,20 +36,20 @@
 							<li><a href="https://twitter.com/koint"> <i
 									class="fa fa-inverse fa-twitter fa-2x"></i>Twitter</a></li>
 						</ul></li>
-					
+
 				</ul>
 			</div>
 		</div>
 	</nav>
-	
+
 		<img
 			alt="{{ page.title }}"
 			src="/assets/images/{{page.id}}/top.jpg" class="img-responsive">
-		
-	
+
+
 	<div class="jumbotron  clearfix">
 
 		<h1 class="text-center">{{ page.title }}</h1>
-		
+
 	</div>
 </div>
