--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 <!-- 					<li><a href="/">Presentations</a></li>-->
 					<li><a href="/tags">Tags</a></li>
 					<li><a href="/about/">About</a></li>
-					<li><a href="/books/">Recommended books</a></li>
+					<!-- <li><a href="/books/">Recommended books</a></li> -->
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" href="#">Follow me<span
 							class="caret"></span></a>
