make it to template

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if page.comments %}
+{% if site.data.settings.disqus.comments and page.comments %}
 	
 <div id="disqus_thread"></div>
 <script>
@@ -14,7 +14,7 @@ this.page.url = "https://alainpham.github.io{{ page.url }}";  // Replace PAGE_UR
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = '//apham.disqus.com/embed.js';
+s.src = '//{{ site.data.settings.disqus.disqus_shortname }}.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
